edited styles in the portfolio component, mainly spacing issues, same with about me component, increased side betweeen text and photo

--- a/src/style/aboutMe.scss
+++ b/src/style/aboutMe.scss
@@ -3,7 +3,7 @@
     grid-template-columns: 1fr 2fr 2fr 1fr;
     width: 100vw;
     height: 100vh;
-    grid-column-gap: 15px;
+    grid-column-gap: 35px;
     margin-top: 50px;
     align-items: center;
     margin-top: -100px;
