--- a/src/style/portfolio.scss
+++ b/src/style/portfolio.scss
@@ -1,16 +1,20 @@
+
 .portfolio {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-row-gap: 25px;
+    background-color: rgb(29, 29, 29); 
     width: 100vw;
-    height: 100vh;
-    background-color: rgb(29, 29, 29);
+    height: 100%;
+    
 }
 
 .madlibs {
     @include portfolioContainer();
-        
+    
+    margin-top: 125px;
     grid-row-start: 1;
+    height: 350px;
     
     &__text {
         @include portfolioText();
@@ -33,6 +37,8 @@
     @include portfolioContainer();
 
     grid-row-start: 2;
+    height: 350px;
+    margin-top: 35px;
 
     &__text1 {
         @include portfolioText();
